day15_kyverno_policies/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: exemplo-pod
spec:
  containers:
  - name: exemplo-container
#    image: crg.dev/chainguard/nginx
    image: nginx
    resources:
      limits:
        memory: 64Mi
        cpu: 1
