day15_kyverno_policies/require-resources-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-cpu-memory-limits
spec:
  validationFailureAction: Enforce # quando quero que ele nao execute se não atender aos requisitos
  rules:
  - name: validate-limits
    match: 
      resources:
        kinds: # poderia colocar svc, deployments, etc
        - Pod
    # exclude:
    #   resources:
    #     namespaces:
    #     - exemplo
    validate: 
      message: "Obrigatório definir recursos de CPU e Memória"
      pattern:
        spec:
          containers:
          - name: "*" # nome do container ou para todos com *
            resources:
              limits:
                memory: "?*" 
                cpu: "?*"
